# shi-ci-qu-dict

./: .gitignore  README.md  pyproject.toml
data/: list_entries.html  search_keys.tsv  unique_entries.html
scripts/: format.py  gen_unique_entries.py
